# glitch

./: CMakeLists.txt  LICENSE  README.md  config.h.in  main.cpp
include/: glitch.hpp
lib/: glitch.cpp  glitch.hpp
lib/include/: glitch.hpp
lib/src/: glitch.cpp
